<resources>

    <string name="facebook_app_id">1578544679129193</string>

    <string name="app_name">Tiket</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_home">HomeActivity</string>

    <!--        BUTTON TEXT        -->
    <string name="pesquisar">Pesquisar</string>
    <string name="anunciar">Anunciar</string>
    <string name="inicio">Inicio</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="logar">Logar</string>
    <string name="criarConta">Criar Conta</string>
    <string name="cadastrar">Cadastrar</string>

    <!--        LOGIN TEXTS        -->
    <string name="login">Login</string>
    <string name="novaSenha">Nova Senha</string>
    <string name="repeteSenha">Repita a Senha</string>
    <string name="termos">Termos e condições</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="email">Email</string>

</resources>
